--- a/package.json
+++ b/package.json
@@ -14,13 +14,13 @@
     "hexo-generator-feed": "^1.2.2",
     "hexo-generator-index": "^0.2.0",
     "hexo-generator-json-content": "^3.0.1",
+    "hexo-generator-seo-friendly-sitemap": "0.0.20",
     "hexo-generator-tag": "^0.2.0",
     "hexo-renderer-ejs": "^0.3.0",
+    "hexo-renderer-markdown-it": "^3.4.1",
     "hexo-renderer-marked": "^0.3.0",
     "hexo-renderer-stylus": "^0.3.1",
     "hexo-server": "^0.2.0",
-    "hexo-service-worker": "^1.0.1",
-    "hexo-generator-seo-friendly-sitemap": "0.0.20",
-    "hexo-renderer-markdown-it": "^3.4.1"
+    "hexo-service-worker": "^1.0.1"
   }
 }
