--- a/source/manifest.json
+++ b/source/manifest.json
@@ -1,16 +1,16 @@
 {
   "name": "Dayuan's Blog",
-  "short_name": "dayuan",
+  "short_name": "大元的博客",
   "icons": [
     {
-      "src": "/img/icons/kumamon192.png",
+      "src": "/img/icons/kumamon192.jpg",
       "sizes": "192x192",
-      "type": "image/png"
+      "type": "image/jpg"
     },
     {
-      "src": "/img/icons/kumamon512.png",
+      "src": "/img/icons/kumamon512.jpg",
       "sizes": "512x512",
-      "type": "image/png"
+      "type": "image/jpg"
     }
   ],
   "start_url": "/?fr=pwahomescreen",
