--- a/source/manifest.json
+++ b/source/manifest.json
@@ -3,14 +3,14 @@
   "short_name": "大元的博客",
   "icons": [
     {
-      "src": "/img/icons/kumamon192.jpg",
+      "src": "/img/icons/kumamon192.png",
       "sizes": "192x192",
-      "type": "image/jpg"
+      "type": "image/png"
     },
     {
-      "src": "/img/icons/kumamon512.jpg",
+      "src": "/img/icons/kumamon512.png",
       "sizes": "512x512",
-      "type": "image/jpg"
+      "type": "image/png"
     }
   ],
   "start_url": "/?fr=pwahomescreen",
